// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OctoRelayViewModel Constructor should set its certain properties 1`] = `
{
  "loginState": {
    "hasPermission": [MockFunction],
  },
  "onDataUpdaterPluginMessage": [Function],
  "settingsViewModel": {
    "access": {
      "permissions": {
        "PLUGIN_OCTORELAY_SWITCH": {
          "test": "I am PLUGIN_OCTORELAY_SWITCH",
        },
      },
    },
  },
}
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: $() 1`] = `
[
  [
    "#navbar_plugin_octorelay #relaisr1",
  ],
  [
    "#navbar_plugin_octorelay #relaisr2",
  ],
  [
    "#navbar_plugin_octorelay #relaisr3",
  ],
  [
    "#navbar_plugin_octorelay #relaisr4",
  ],
  [
    "#navbar_plugin_octorelay #relaisr5",
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .attr() 1`] = `
[
  [
    "title",
    "Nozzle Light",
  ],
  [
    "title",
    "Printer",
  ],
  [
    "title",
    "Fan",
  ],
  [
    "title",
    "Chassis Light",
  ],
  [
    "title",
    "R5",
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .find() 1`] = `
[
  [
    ".modal-title",
  ],
  [
    "#octorelay-confirmation-text",
  ],
  [
    ".btn-cancel",
  ],
  [
    ".btn-confirm",
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .html() 1`] = `
[
  [
    "<div>&#128161;</div>",
  ],
  [
    "<img src="plugin/dashboard/static/img/printer-icon.png">",
  ],
  [
    "<img src="plugin/dashboard/static/img/fan-icon.png">",
  ],
  [
    "<div>&#127774;</div>",
  ],
  [
    "ON",
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    "destroy",
  ],
  [
    "destroy",
  ],
  [
    "destroy",
  ],
  [
    "destroy",
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .removeAttr() 1`] = `
[
  [
    "data-original-title",
  ],
  [
    "title",
  ],
  [
    "data-original-title",
  ],
  [
    "title",
  ],
  [
    "data-original-title",
  ],
  [
    "title",
  ],
  [
    "data-original-title",
  ],
  [
    "title",
  ],
  [
    "data-original-title",
  ],
  [
    "title",
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .removeData() 1`] = `
[
  [
    "original-title",
  ],
  [
    "original-title",
  ],
  [
    "original-title",
  ],
  [
    "original-title",
  ],
  [
    "original-title",
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .text() 1`] = `
[
  [
    "Turning Printer off",
  ],
  [
    "Are you sure you want to turn the Printer off?",
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .toggle() 1`] = `
[
  [
    true,
  ],
  [
    true,
  ],
  [
    true,
  ],
  [
    true,
  ],
  [
    false,
  ],
]
`;

exports[`OctoRelayViewModel Message handler should process the supplied configuration: .tooltip() 1`] = `
[
  [
    "destroy",
  ],
  [
    {
      "placement": "bottom",
    },
  ],
  [
    "destroy",
  ],
  [
    {
      "placement": "bottom",
    },
  ],
  [
    "destroy",
  ],
  [
    {
      "placement": "bottom",
    },
  ],
  [
    "destroy",
  ],
  [
    {
      "placement": "bottom",
    },
  ],
  [
    "destroy",
  ],
  [
    {
      "placement": "bottom",
    },
  ],
]
`;

exports[`OctoRelayViewModel Should display upcoming state popover (15 sec delay): .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    {
      "content": "<time datetime="2023-08-13T20:30:15.000Z" title="8/13/2023, 10:30:15 PM">in 15 seconds</time><button id="cancel-btn-r1" class="btn btn-mini" type="button">Cancel</button>",
      "html": true,
      "placement": "bottom",
      "title": "<span>Nozzle Light goes <span class="label">OFF</span></span><button id="pop-closer-r1" type="button" class="close"><span class="fa fa-close fa-sm"></span></button>",
      "trigger": "manual",
    },
  ],
  [
    "show",
  ],
]
`;

exports[`OctoRelayViewModel Should display upcoming state popover (150 sec delay): .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    {
      "content": "<time datetime="2023-08-13T20:32:30.000Z" title="8/13/2023, 10:32:30 PM">in 3 minutes</time><button id="cancel-btn-r1" class="btn btn-mini" type="button">Cancel</button>",
      "html": true,
      "placement": "bottom",
      "title": "<span>Nozzle Light goes <span class="label">OFF</span></span><button id="pop-closer-r1" type="button" class="close"><span class="fa fa-close fa-sm"></span></button>",
      "trigger": "manual",
    },
  ],
  [
    "show",
  ],
]
`;

exports[`OctoRelayViewModel Should display upcoming state popover (5000 sec delay): .popover() 1`] = `
[
  [
    "destroy",
  ],
  [
    {
      "content": "<time datetime="2023-08-13T21:53:20.000Z" title="8/13/2023, 11:53:20 PM">in 1 hour</time><button id="cancel-btn-r1" class="btn btn-mini" type="button">Cancel</button>",
      "html": true,
      "placement": "bottom",
      "title": "<span>Nozzle Light goes <span class="label">OFF</span></span><button id="pop-closer-r1" type="button" class="close"><span class="fa fa-close fa-sm"></span></button>",
      "trigger": "manual",
    },
  ],
  [
    "show",
  ],
]
`;

exports[`OctoRelayViewModel Should push the model into the registry 1`] = `
{
  "construct": [Function],
  "dependencies": [
    "settingsViewModel",
    "loginStateViewModel",
  ],
}
`;
